faker working and username displayed on get request

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,19 +1,33 @@
-  <title>Potluck Party</title>
-  <link rel="stylesheet" href="/css/jass.css">
-  <link rel="stylesheet" href="/css/style.css">
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <title>Tech Blog</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ 
 </head>
 
 <body>
+    <div class="nav">
+      <a href="/"></a>Home<span class="sr-only">(current)</span></a>
+      <a href="/dashboard">Dashboard</a>
+      <a href="" id="logout" style="cursor: pointer;">logout</a>
+    </div>
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
       <h1>
         test
       </h1>
     </header>
-      <main class="container container-fluid mt-5">
-        {{{ body }}}
-      </main>
+    <main class="container container-fluid mt-5">
+      {{{ body }}}
+    </main>
   </div>
-  </body>
+
+
+
+</body>
 
 </html>
