--- a/views/partials/post.handlebars
+++ b/views/partials/post.handlebars
@@ -1,7 +1,10 @@
 <div class="post-card">
   <div class="post-card-header">
     {{#each posts}}
-      <li>{{title}}</li>
+    <li>{{User.name}}</li>
+    <li>{{title}}</li>
+    <li>{{topic}}</li>
+    <li>{{description}}</li>
     {{/each}}
   </div>
 </div>
