added comments model and seed data checked foreign keys working

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,6 +13,7 @@
     <div class="nav">
       <a href="/"></a>Home<span class="sr-only">(current)</span></a>
       <a href="/dashboard">Dashboard</a>
+      <a href="/login">Log In/ Sign Up</a>
       <a href="" id="logout" style="cursor: pointer;">logout</a>
     </div>
   <div class="flex-column justify-space-around">
