routes added and handelbars functionality updated

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,13 @@
-<div class="nav"></div>
+
 
 
 
 <div>
+    <p>homepage</p>
+  
+
+<div>
+{{#each posts as |post|}}
     {{>post}}
+{{/each}}
 </div>
