--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,10 +11,10 @@
 
 <body>
     <div class="nav">
-      <a href="/"></a>Home<span class="sr-only">(current)</span></a>
+      <a href="/">homepage</a>
       <a href="/dashboard">Dashboard</a>
       <a href="/login">Log In/ Sign Up</a>
-      <a href="" id="logout" style="cursor: pointer;">logout</a>
+      {{!-- <a href="" id="logout" style="cursor: pointer;">logout</a> --}}
     </div>
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
