--- a/views/partials/post.handlebars
+++ b/views/partials/post.handlebars
@@ -1,10 +1,11 @@
 <div class="post-card">
   <div class="post-card-header">
-    {{#each posts}}
+    <a  href="/post/{{id}}"></a>
+    <p> new post</p>
     <li>{{User.name}}</li>
     <li>{{title}}</li>
     <li>{{topic}}</li>
     <li>{{description}}</li>
-    {{/each}}
+
   </div>
 </div>
