--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,7 +19,7 @@
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
       <h1>
-        test
+        Tech Blog
       </h1>
     </header>
     <main class="container container-fluid mt-5">
@@ -28,7 +28,7 @@
   </div>
 
 
-
+<script src="/js/login.js"></script>
 </body>
 
 </html>
