--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,47 @@
 <div>
     <p>login</p>
+    <div>
+    <div>
+        <h2>Login</h2>
+        <form class="p-2 rounded" style="background-color: purple;" action="submit" id="login-form">
+        <div>
+            <label for="email-login">Email Address: </label>
+            <input type="text" id="email-login" placeholder="example@email.com"/>
+        </div>
+        <div>
+            <label for="password-login">Password: </label>
+            <input type="password" id="password-login" />
+        </div>
+        <div>
+            <button type="submit">Login</button>
+        </div>
+        </form>
+    </div>
+    
+    <div>
+        <div>
+        <h2>Signup</h2>
+        <form class="p-2 rounded" style="background-color:purple;" action="submit" id="signup-form">
+        <div>
+            <label for="email-signup">Email Address: </label>
+            <input type="text" id="email-signup" placeholder="example@email.com"/>
+        </div>   
+
+        <div>
+            <label for="username-signup">Username: </label>
+            <input type="text" id="username-signup" />
+        </div>
+        <div>
+            <label for="password-signup">Password: </label>
+            <input type="password" id="password-signup" />
+        </div>
+        <div>
+            <button type="submit">Signup</button>
+        </div>
+        </form>
+    </div>
+    </div>
+</div>
     
 {{#each posts as |post|}}
     {{>post}}
