login and logout working, redirect for dash board working

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,3 +1,10 @@
 <div class="div">
     <p>dashboard</p>
+
+  <div>
+            <button type="logout">logout</button>
+        </div>
+
+
+<script src="/js/dashboard.js"></script>    
 </div>
