--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,11 +3,32 @@
 
 
 <div>
-    <p>homepage</p>
+    <h1>homepage</h1>
+
+
+     <div>
+        <h2>Login</h2>
+        <form class="p-2 rounded" style="background-color: purple;" action="submit" id="login-form">
+        <div>
+            <label for="email-login">Email Address: </label>
+            <input type="text" id="email-login" placeholder="example@email.com"/>
+        </div>
+        <div>
+            <label for="password-login">Password: </label>
+            <input type="password" id="password-login" />
+        </div>
+        <div>
+            <button type="submit">Login</button>
+        </div>
+        </form>
+    </div>
+    
   
 
 <div>
 {{#each posts as |post|}}
     {{>post}}
 {{/each}}
+
+<script src="/js/homepage.js"></script>
 </div>
