added button and form for leaving comment, view post now shows comments and their user creators name

--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -1,4 +1,9 @@
 <div>
+
     <p>comment</p>
     <li>{{commentbody}}</li>
+    <li>comment owner: {{User.name}}</li>
+  <li>commented at {{createdAt}}</li>
+    
 </div>
+     
