--- a/views/viewpost.handlebars
+++ b/views/viewpost.handlebars
@@ -17,7 +17,7 @@
         <h2>Leave Your Comment:</h2>
         {{!-- maybeBlogPost --}}
         <form action="submit" id ="commentForm" data-id ="{{post.id}}">
-            <label for="reviewText">Your comments:</label>
+            <label for="commentText">Your comments:</label>
             <br>
             <textarea name="commentText" id="commentText"></textarea>
             <button type="submit">Submit</button>
