--- a/views/viewpost.handlebars
+++ b/views/viewpost.handlebars
@@ -12,15 +12,15 @@
 
        <div>
 
-  
+ 
 
         <h2>Leave Your Comment:</h2>
-        {{!-- maybeBlogPost --}}
-        <form action="submit" id ="commentForm" data-id ="{{post.id}}">
+       
+        <form action="submit" id ="commentForm" data-id ="{{id}}">
             <label for="commentText">Your comments:</label>
             <br>
             <textarea name="commentText" id="commentText"></textarea>
-            <button type="submit">Submit</button>
+            <button id="commentBtn" type="submit">Submit</button>
         </form>
     </div>
 
