post comment route fix and user data now displayed on view posts

--- a/views/viewpost.handlebars
+++ b/views/viewpost.handlebars
@@ -6,8 +6,8 @@
       <li>{{description}}</li>
 
 
-      {{#each Comments as |comment|}}
-      {{>comments}}
+      {{#each comments}}
+      {{>commentcard}}
       {{/each}}
 
        <div>
