working dashboard routes for getting posts and basic handlebars structure for creating new posts

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -3,8 +3,12 @@
 
   <div>
             <button type="logout">logout</button>
+            <p>sfasd</p>
         </div>
-  
+   <div>
+            <a href="/createnewpost">create new post</a>
+        </div>
+       
 
 {{#each posts as |post|}}
     {{>post}}
