--- a/views/createnewpost.handlebars
+++ b/views/createnewpost.handlebars
@@ -7,13 +7,18 @@
         <h2>Create New post</h2>
         <form class="p-2 rounded" style="background-color: purple;" action="submit" id="login-form">
         <div>
-            <label for="email-login">Email Address: </label>
-            <input type="text" id="email-login" placeholder="example@email.com"/>
+            <label for="title">title: </label>
+            <input type="text" id="title-post" placeholder="A title"/>
         </div>
-        <div>
-            <label for="password-login">Password: </label>
-            <input type="password" id="password-login" />
+          <div>
+            <label for="topic">topic: </label>
+            <input type="text" id="topic-post" placeholder="A post"/>
         </div>
+          <div>
+            <label for="description">description: </label>
+            <input type="text" id="description-post" placeholder="A description"/>
+        </div>
+   
         <div>
             <button type="submit">create post</button>
         </div>
