prototype route for creating new post, working accepting dashboard display of username and time created

--- a/views/createnewpost.handlebars
+++ b/views/createnewpost.handlebars
@@ -5,7 +5,7 @@
         </div>
     <div>
         <h2>Create New post</h2>
-        <form class="p-2 rounded" style="background-color: purple;" action="submit" id="login-form">
+        <form class="p-2 rounded" style="background-color: purple;" action="submit" id="createpost-form">
         <div>
             <label for="title">title: </label>
             <input type="text" id="title-post" placeholder="A title"/>
@@ -23,4 +23,5 @@
             <button type="submit">create post</button>
         </div>
         </form>
+        <script src="/js/createpost.js"></script>    
     </div>
