logout btn fix propagation stopped

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,13 +1,16 @@
 <div class="div">
     <p>dashboard</p>
+<div>
 
   <div>
-            <button type="logout">logout</button>
-            <p>sfasd</p>
+            <button type="logout" id="btnId" >logout</button>
+           
         </div>
    <div>
-            <a href="/createnewpost">create new post</a>
+            <a id="newpost" href="/createnewpost">create new post</a>
         </div>
+</div>
+
        
 
 {{#each posts as |post|}}
