--- a/views/postedit.handlebars
+++ b/views/postedit.handlebars
@@ -2,15 +2,14 @@
   <div class="post-card-header" data-id ="{{id}}">
     
     <p>post</p>
-    <a  href="/api/post/{{id}}"><h3>view {{title}}</h3></a>
+    
     <li>Created by: {{User.name}}</li>
     <li>Post title: {{title}}</li>
     <li>Created at: {{created_at}}</li>
     <li>Post topic: {{topic}}</li>
     <li>Post: {{description}}</li>
-    <div>
-            <a href="/api/post/{{id}}/postedit">edit post</a>
-        </div>
     
+    <button id="post-delete" data-id="{{id}}">Delete This Post</button>
   </div>
+  <script src="/js/editpost.js"></script>  
 </div>
